--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "fatchip/fatpay",
   "description": "The FATPay OXID Payment-Plugin",
   "type": "oxideshop-module",
+  "version": "1.0.0",
   "authors": [
     {
       "name": "Fatchip",
